popmetal init commit

--- a/res/values-nb/strings.xml
+++ b/res/values-nb/strings.xml
@@ -141,7 +141,7 @@
     <string name="rendering_mode_crop" msgid="1892533060338728880">"Beskjær"</string>
     <string name="yes" msgid="5627909733720577098">"Ja"</string>
     <string name="no" msgid="4303537392215476576">"Nei"</string>
-    <string name="done" msgid="5693464841369633740">"Fullført"</string>
+    <string name="done" msgid="5693464841369633740">"Ferdig"</string>
     <string name="edit" msgid="8659197150838109875">"Rediger"</string>
     <string name="remove" msgid="7886072447916861923">"Fjern"</string>
     <string name="untitled" msgid="579236531346245199">"Uten navn"</string>
